<resources>
    <string name="app_name">dat_ve_tau</string>
    <string name="txtten">Nhập tên:</string>
    <string name="txtsdt">Nhập SĐT:</string>
    <string name="vip">VIP</string>
    <string name="thuong">Thường</string>
    <string name="giuong">Giường nằm</string>
    <string name="ghe">Ghế ngồi</string>
    <string name="dichvu">Dịch vụ(nước uống, thức ăn, khăn lạnh)</string>
    <string name="thanhtoan">Thanh toán</string>
    <string name="cancle">Hủy</string>
    <string name="book">Thanh toán</string>
    <string-array name="lan_array">
        <item>USD</item>
        <item>VND</item>
    </string-array>


</resources>
